trying to fix filling heart animation and text overflow problems

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,7 @@ div, p {
   border-radius: 50%;
   border-top-color: #9356DC;
   border-bottom-color: #FF79DA;
-  animation: spin 1.5s 2 ease-in-out;
+  animation: spin 1.5s 3 ease-in-out;
 }
 
 .body {
@@ -106,7 +106,7 @@ div, p {
   left: -99999px;
   opacity: 0;
   width: 100%;
-  animation: visibility 0.5s 2s forwards;
+  animation: visibility 0.5s 1.7s forwards;
 }
 
 .btn {
@@ -438,13 +438,39 @@ footer .fa-hands-helping {
 }
 
 .heart--svg {
-  width: 30px;
+  width: 28px;
+  height: 28px;
+  -webkit-mask: url(../../public/img/icons/heart-regular-solid.svg) no-repeat center;
+  mask: url(../../public/img/icons/heart-regular-solid.svg) no-repeat center;
+  background-color: #000;
+  position: relative;
+  z-index: 1;
 }
 
-svg {
+.heart--svg-hover {
+  width: 18px;
+  height: 18px;
+  -webkit-mask: url(../../public/img/icons/heart-regular-full.svg) no-repeat center;
+  mask: url(../../public/img/icons/heart-regular-full.svg) no-repeat center;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: 2;
+  opacity: 0;
+}
+.heart--svg-hover:hover {
+  opacity: 1;
+}
+
+.heart--svg-2 {
+  width: 28px;
+  font-size: 28px;
+  height: auto;
   background-image: red;
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
+  background-color: red;
+  color: red;
+  fill: red;
 }
 
 .restau-img {
@@ -563,6 +589,10 @@ svg {
 .dish p {
   font-size: 1.4rem;
   font-weight: 300;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-width: 0;
 }
 .dish .price {
   font-weight: 500;
@@ -600,6 +630,13 @@ svg {
 
 .menu__desserts {
   margin-bottom: 50px;
+}
+
+.comment {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-width: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
