--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -183,6 +183,7 @@
     border-radius: 0 0 15px 15px;
     padding: 20px 24px 20px 14px;
     box-shadow: 0 5px 5px  #ebebeb;
+    
 
     h3 {
         font-size: 1.8rem;
@@ -223,13 +224,40 @@
 }
 
 .heart--svg {
-   width: 30px;
-
+    width: 28px;
+    height: 28px;
+    -webkit-mask:  url(../../public/img/icons/heart-regular-solid.svg) no-repeat center;
+    mask: url(../../public/img/icons/heart-regular-solid.svg) no-repeat center;   
+    background-color: #000;
+    position: relative;
+    z-index: 1;
 }
 
-svg {
-    background-image: red;
-    -webkit-background-clip: border-box;
-    background-clip: border-box;
+.heart--svg-hover {
+   width: 18px;
+   height: 18px;
+   -webkit-mask:  url(../../public/img/icons/heart-regular-full.svg) no-repeat center;
+   mask: url(../../public/img/icons/heart-regular-full.svg) no-repeat center;   
+   background-image: linear-gradient($color-secondary, $color-primary);
+   position: absolute;
+   top: 5px;
+   left: 5px;
+   z-index: 2;
+   opacity: 0;
+   &:hover {
+       opacity: 1;
+   }
+}
 
+
+
+
+.heart--svg-2 {
+    width: 28px;
+    font-size: 28px;
+    height: auto;
+    background-image: red;
+    background-color: red;
+    color: red;
+    fill: red;
 }
