--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -103,6 +103,7 @@
           }
     }
 }
+
 .dish {
     display: flex;
     flex-direction: column;
@@ -126,6 +127,10 @@
         p {
             font-size: 1.4rem;
             font-weight: 300;
+            white-space: nowrap; 
+            overflow: hidden;
+            text-overflow: ellipsis;
+            min-width: 0;
         }
         .price {
             font-weight: 500;
@@ -174,4 +179,12 @@
 
 .menu__desserts {
     margin-bottom: 50px;
+}
+
+
+.comment {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 0;
 }
